Fix one long word message overflowing

--- a/scss/partials/_site.scss
+++ b/scss/partials/_site.scss
@@ -92,6 +92,9 @@ main {
             //.message.sending {
             //  opacity: 0.1;
             //}
+            .message {
+              overflow: hidden;
+            }
             .spinner {
               left: -25px;
               position: absolute;
